traefik/dashboard/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure  # Usa el entrypoint seguro (443)
  routes:
    - match: Host(`traefik.migbertweb.xyz`) && PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: dashboard-auth  # Middleware de autenticación básica
          namespace: traefik
      services:
        - name: api@internal  # Servicio interno de Traefik
          kind: TraefikService
      priority: 10  # Prioridad alta para esta ruta
  tls:
    secretName: traefik-dashboard-tls  # Nombre del secret con el certificado TLS
    options:
      name: default
      namespace: traefik
